k8s/apps/web/rbmusic/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rbmusic
spec:
  selector:
    app.kubernetes.io/name: rbmusic
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
